[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breachsql"
version = "0.1.2"
description = "Context-aware SQL injection scanner with WAF detection and evasion"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [
  { name = "CommonHuman-Lab" },
]
keywords = ["sqli", "sql-injection", "security", "scanner", "pentest", "bugbounty"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "requests>=2.28.0",
  "urllib3>=1.26.0",
  "commonhuman-cli>=0.1.0",
  "commonhuman-payloads>=0.1.0",
  "commonhuman-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.0",
  "mypy>=1.0",
  "ruff>=0.4",
  "types-requests",
]

[project.scripts]
breachsql = "breachsql.__main__:main"

[project.urls]
Homepage = "https://github.com/commonhuman-lab/breachsql"
Issues   = "https://github.com/commonhuman-lab/breachsql/issues"

[tool.hatch.build.targets.wheel]
packages = ["breachsql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"
norecursedirs = ["breachsql", ".venv", "dist"]
markers = [
  "firerange: end-to-end tests that require the BreachSQL Fire Range (OctoRig lab 7)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
